Moved history to lower down page

--- a/tonic.css
+++ b/tonic.css
@@ -238,8 +238,8 @@ div#content div.box a {
 /* content half size box */
 
 div#content div.half-box {
-    margin: 0;
-    width: 40%;
+    margin: 0 0 40px;
+    width: 50%;
 }
 
 /* info box */
@@ -251,6 +251,7 @@ div#content div.info-box {
     -webkit-border-radius: 10px;
     line-height: 1.6em;
     margin: 20px 10px;
+    width: 45%;
 }
 
 div#content div.info-box h3 {
