Include database selection page into example Added HAL view via nocarrier/hal library

--- a/views/table.html
+++ b/views/table.html
@@ -1,21 +1,27 @@
 {extends file="shell.html"}
 
+{block name=title}{$table}{/block}
+
 {block name=body}
-    <table border="1">
-        <tr>
-            {foreach $fields as $item}
-                <th>{$item}</th>
-            {/foreach}
-        </tr>
-        {foreach $data as $row}
+    <h1>Table: {$table}</h1>
+    {if isset($data)}
+        <table border="1">
             <tr>
-                {foreach $row as $item}
-                    <td>{$item}</td>
+                {foreach $fields as $item}
+                    <th>{$item}</th>
                 {/foreach}
             </tr>
-        {/foreach}
-    </table>
-
-    {if $page - 1 > 0}<a href="?page={$page - 1}">Previous Page</a>{/if}
-    <a href="?page={$page + 1}">Next Page</a>
+            {foreach $data as $row}
+                <tr>
+                    {foreach $row as $item}
+                        <td>{$item}</td>
+                    {/foreach}
+                </tr>
+            {/foreach}
+        </table>
+        {if $page - 1 > 0}<a href="?page={$page - 1}" rel="prev">Previous Page</a>{/if}
+        <a href="?page={$page + 1}" rel="next">Next Page</a>
+    {else}
+        <p>Empty table.</p>
+    {/if}
 {/block}
