--- a/views/shell.html
+++ b/views/shell.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title></title>
+        <title>{block name=title}MySQL Database{/block}</title>
     </head>
     <body>
         {block name=body}{/block}
